--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
+        <a href="about.html">ABOUT</a>
         <a href="#">TEAM</a>
         <a href="#">CONTACT</a>
         <a href="#" id="button">REGISTER</a>
