Modal Bug fixed Images renamed and arranged logo centered facebook and insta link added

--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet Our Team</title>
-    <link rel="stylesheet" href="team-s.css"
+    <link rel="stylesheet" href="style-team.css"
 </head>
 <body>
     <h1>Quest Team</h1>
@@ -13,7 +13,7 @@
         <div class="card">
             <div class="content">
                 <div class="profile">
-                    <img src="DR Gyan.jpg" alt="">
+                    <img src="images/img-team/DR Gyan.jpg" alt="">
                 </div>
                 <div class="detail">
                     <h3>Dr Gyan Prakash</h3>
@@ -27,7 +27,7 @@
         <div class="card">
             <div class="content">
                 <div class="profile">
-                    <img src="Dr SK.jpg" alt="">
+                    <img src="images/img-team/Dr SK.jpg" alt="">
                 </div>
                 <div class="detail">
                     <h3>Dr Shyamkiran Kaur</h3>
@@ -40,7 +40,7 @@
         <div class="card">
             <div class="content">
                 <div class="profile">
-                    <img src="abhishek.jpg" alt="">
+                    <img src="images/img-team/abhishek.jpg" alt="">
                 </div>
                 <div class="detail">
                     <h3>Abhishek Kalia</h3>
@@ -54,7 +54,7 @@
         <div class="card">
             <div class="content">
                 <div class="profile">
-                    <img src="saket.jpg" alt="">
+                    <img src="images/img-team/saket.jpg" alt="">
                 </div>
                 <div class="detail">
                     <h3>Saket Jha</h3>
@@ -68,7 +68,7 @@
         <div class="card">
             <div class="content">
                 <div class="profile">
-                    <img src="aditya.jpg" alt="">
+                    <img src="images/img-team/aditya.jpg" alt="">
                 </div>
                 <div class="detail">
                     <h3>Aditya V. Shrivastav</h3>
@@ -82,7 +82,7 @@
         <div class="card">
             <div class="content">
                 <div class="profile">
-                    <img src="jaikirat.jpg" alt="">
+                    <img src="images/img-team/jaikirat.jpg" alt="">
                 </div>
                 <div class="detail">
                     <h3>Jaikirat Singh</h3>
@@ -97,7 +97,7 @@
         <div class="card">
             <div class="content">
                 <div class="profile">
-                    <img src="ankit.jpg" alt="">
+                    <img src="images/img-team/ankit.jpg" alt="">
                 </div>
                 <div class="detail">
                     <h3>Ankit Jaiswal</h3>
