--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <p><span style="font-size:24px">Quest has a legacy spanning a decade. <br>We give our members a platform to plan, organize and conduct quizzes.<br>We have won quizzes at National and Regional levels.  </p>
         </div>
           <div class="column-33">
-              <img src="1.1.jpg" height="400">
+              <img src="images/img-about/1.1.jpg" height="400">
           </div>
         </div>
       </div>
@@ -35,7 +35,7 @@
             <p><span style="font-size:24px">At quest there is no dearth of challenges. <br>We stimulate your imagination as well as your spirits.<br> A buzzer or rapid fire we have it all.</p>
           </div>
           <div class="column-33">
-            <img src="2.jpg"   height="400" >
+            <img src="images/img-about/2.jpg"   height="400" >
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
             <p><span style="font-size: 24px;"> We all have different tastes.<br>Quest is a society of diverse thoughts and opinions.<br>You don't need to be a history buff to find your place, we have a place for every niche.</span></p>
           </div>
           <div class="column-33">
-              <img src="3.jpg"  height="400" >
+              <img src="images/img-about/3.jpg"  height="400" >
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
             <p><span style="font-size:24px"> <br>One's a company.<br> Two's a crowd.<br>Three's a party<br><br>We look after each other and when surrounded by friends there is never a dull moment,<br>its always a party.</p>
           </div>
           <div class="column-33">
-            <img src="4.jpg"   height="400" >
+            <img src="images/img-about/4.jpg"   height="400" >
           </div>
         </div>
       </div>
